.archive/nx-kubeflow-deployment/kubeflow/example/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: example
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/tls-acme: "true"
    #kubernetes.io/ingress.class: istio
spec:
  ingressClassName: istio
  rules:
  - host: example-kubeflow-kcd.demo.kubermatic.io
    http:
      paths:
        - backend:
            service:
              name: nginx
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
  tls:
  - hosts:
    - example-kubeflow-kcd.demo.kubermatic.io # This should match a DNS name in the Certificate
    secretName: example-kubeflow-demo-ingress-cert # This should match the Certificate secretName
